versions/2.0.1/first-story/create-your-characters.md
# Create your characters

Before anything, you need to create characters.

To access **character manager** press `n` and click on `C` button on the left.

Here, will be stored all your characters. At first, it will be empty, so click on the `+` button and create a character.

We will call it `Steve`. Before saving, we will label him as a **main character**. A main character is the character that will be the center of the story. Click on `Main Character Settings` and set `Main Character` from `no` to `yes`. The button `Skin` will be enabled.

The `Skin` button has 3 modes :

1. Skin from file - The character will have the skin from his folder if it exists
2. Skin of player - The character will have the skin of the client
3. Client has character skin - The client and the character will have the skin from the character folder.

The 3 modes really depend on your needs.
- If your main character is an OC, then choose 1
- If you want the main character to be the client, then choose 2
- If your main character is an OC and you want full immersion by having the skin from the folder for both character and client, then choose 3

Client means the person who's playing Minecraft.

::: tip
Creating a character requires a name, but you might want to have the main character to be named like the client.
To achieve this, just name the character as `user`. The main character will be automatically named as the client.
:::

Create a second character, call it `Alex`, we will need it for later.

## Skin

If you want to assign a skin to your character, go to the `narrativecraft` folder of your world and go to the `characters` and enter your character folder.

Just place your skin, and it must be named `skin.png` in order to work.